# query-builder

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: query-builderConfig.cmake.in
include/: base.hpp  case.hpp  format_query.hpp  query_base.hpp  schema.hpp  select_query.hpp  table_operation.hpp  utility.hpp
include/math/: aggregate.hpp  ariphmetic.hpp
tests/: CMakeLists.txt  Makefile
tests/src/: general.cpp  query-base.cpp  schema.cpp
